image overflow fix

--- a/index.css
+++ b/index.css
@@ -41,27 +41,30 @@ p, span, label{
   max-width: 280px;
 }
 
-.map-container, .nasa-container{
+.map-container, .nasa-container, .secret-form-container{
   min-width: 300px;
   min-height: 100px;  
-  margin:1%;
+  margin:1% 1% 0% 1%;
 
 }
 
 .map-results, .nasa-results, .revealed-form{
   min-width: 300px;
+  max-width: 500px;
   min-height: 650px;
   padding: 10px;
   transition-property:height;
   transition-timing-function: 2s;
-  /* margin:1%; */
   border: 1px solid black;
 }
 img{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 500px;
+  max-width: 100%;
+  max-width: 100%;
+  min-width: 0;
+  overflow: hidden;
   border-radius: 5px;
 
 }
@@ -154,6 +157,6 @@ transition: width 1s;
 fieldset {
   border: 1px solid black;
   padding: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   min-width: 0;
 }
